# compilerGenerator

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  DFA.h  DFACreator.cpp  DFACreator.h  DFA_minimizer.hpp  LexicalAnalyzer.cpp  NFA.cpp  NFA.h  NFAcreation.cpp  README.md  constants.cpp  constants.h  constants.h~  main.cpp  main.cpp~  postfixRegexConvertor.cpp  regexFileReader.cpp  substitutions.cpp  visualuzer.py
flex-lexical-analyzer/: README.md  lex.yy.c  lexical_analyzer.l  out.txt  test.l
input/: grammar.txt  grammar.txt~  grammer.txt  input.txt  regex_rules.txt
output/: dfa.txt  nfa.txt  tokens.txt
phase 1/: DFA.h  DFACreator.cpp  DFACreator.h  DFA_minimizer.hpp  LexicalAnalyzer.cpp  NFA.h  NFAcreation.cpp  postfixRegexConvertor.cpp  regexFileReader.cpp  substitutions.cpp
phase 2/: PredictiveParsingTable.cpp  firstFollowCalculator.cpp  firstFollowCalculator.cpp~  firstFollowCalculator.h  firstFollowCalculator.h~  grammarFileParser.cpp  grammarFileParser.cpp~  grammarFileParser.h  grammarFileParser.h~  leftFactoring.cpp  leftFactoring.cpp~  leftFactoring.h  leftRecursionElimination.cpp  leftRecursionElimination.cpp~  leftRecursionElimination.h  leftRecusionElimination.h~  parser.cpp  parser.cpp~  parser.h  parser.hpp  predictiveParsingTable.cpp~  predictiveParsingTable.h
